fix: remove overflow clip compability issue in safari/ios

--- a/src/components/AvatarGroup/style.css
+++ b/src/components/AvatarGroup/style.css
@@ -3,10 +3,6 @@
   overflow: hidden;
 }
 
-.avatar-group .avatar {
-  overflow: clip;
-}
-
 .avatar-group .avatar:not(:first-child) {
   margin-left: -8px;
 }
